# BookShop

./: .gitignore  CMakeLists.txt  README.md  SETTINGS.cpp  SETTINGS.h  main.cpp  mainwindow.h  mainwindow.ui
EmployeeWindow/: employeewindow.cpp  employeewindow.h  employeewindow.ui
MainWindow/: mainwindow.cpp
UserWindow/: userwindow.cpp  userwindow.h  userwindow.ui  userwindow.ui.autosave
Widgets/AllOrders/: allorders.cpp  allorders.h  allorders.ui
Widgets/AvailableBooksWidget/: availablebookswidget.cpp  availablebookswidget.h  availablebookswidget.ui
Widgets/BookForm/: bookform.cpp  bookform.h  bookform.ui
Widgets/ClientForm/: clientform.cpp  clientform.h  clientform.ui
Widgets/DiagrammCarSupplier/: diagrammcarsupplier.cpp  diagrammcarsupplier.h  diagrammcarsupplier.ui
Widgets/GistogrammBookPrice/: gistogrammbookprice.cpp  gistogrammbookprice.h  gistogrammbookprice.ui
Widgets/OrderByDate/: orderbydate.cpp  orderbydate.h  orderbydate.ui
Widgets/OrderForm/: orderform.cpp  orderform.h  orderform.ui
Widgets/OrderFormForUser/: orderformforuser.cpp  orderformforuser.h  orderformforuser.ui
Widgets/PublisherBooks/: publisherbooks.cpp  publisherbooks.h  publisherbooks.ui
Widgets/PublisherForm/: publisherform.cpp  publisherform.h  publisherform.ui
Widgets/ReferenceInformation/: referenceinformation.cpp  referenceinformation.h  referenceinformation.ui
Widgets/Reports/: reports.cpp  reports.h  reports.ui
Widgets/SellerForm/: sellerform.cpp  sellerform.h  sellerform.ui
Widgets/SupplierForm/: supplierform.cpp  supplierform.h  supplierform.ui
Widgets/UsersOrdersWidget/: usersorderswidget.cpp  usersorderswidget.h  usersorderswidget.ui
Widgets/UsersOrdersWidgetForUser/: usersorderswidgetforuser.cpp  usersorderswidgetforuser.h  usersorderswidgetforuser.ui
